fix form height jumping

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -235,6 +235,7 @@ header {
             background: #f4f4f4;
             padding: 15px;
             border-radius: 4px;
+            height: 80px;
         }
 
         &>svg {
